<resources>
    <string name="app_name">To Do List</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="to">To</string>
    <string name="dos">Do</string>
    <string name="list">List</string>
    <string name="all_day">ALL DAY</string>
    <string name="all_time">ALL TIMES</string>
    <string name="add_new_task_fragment">Add new task</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="add_new_task">ADD TASK</string>
    <string name="task_complete_info">COMPLETED</string>
    <string name="task_not_complete_info">NOT COMPLETED</string>
    <string name="remaining_time">Remaining time: </string>
    <string name="late_time">Late for: </string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minute</string>
    <string name="seconds">seconds</string>
    <string name="date_created">Task created on </string>
    <string name="day_apart">tomorrow task: </string>
    <string name="hour_apart">task</string>
    <string name="day_apart_description">Time: </string>
    <string name="notification_channel_name">ToDoList</string>
    <string name="no_tasks_available">No tasks available</string>

</resources>