<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_new_task_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/add_new_task_fragment"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:background="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/new_task_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/add_new_task_design"
            android:ems="10"
            android:hint="@string/enter_task_title"
            android:inputType="textPersonName"
            android:paddingLeft="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <EditText
            android:id="@+id/new_title_description"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/add_new_task_design"
            android:ems="10"
            android:hint="@string/enter_task_description"
            android:inputType="textPersonName"
            android:paddingLeft="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/new_task_title"
            app:layout_constraintStart_toStartOf="@+id/new_task_title"
            app:layout_constraintTop_toBottomOf="@+id/new_task_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_new_task_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/red"
            android:text="@string/add_new_task"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calender_date_picker" />

        <CalendarView
            android:id="@+id/calender_date_picker"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:theme="@style/CalenderViewCustom"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_title_description" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="Start:"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/calender_date_picker"
            app:layout_constraintTop_toBottomOf="@+id/calender_date_picker" />

        <TextView
            android:id="@+id/date_and_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="TextView"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/calender_date_picker"
            app:layout_constraintTop_toBottomOf="@+id/calender_date_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>